--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/cli": "^4.1.18",
     "prettier": "^3.7.4",
     "prettier-plugin-go-template": "^0.0.15",
+    "prettier-plugin-toml": "^2.0.6",
     "rustywind": "^0.24.3",
     "tailwindcss": "^4.1.18"
   },
