feat: Icon component  (#1)
* feat: Add new shadcn/ui color themes for UI customization

* refactor(css): Integrate Tailwind CSS and theme variables

* feat(ui): Add icon component partial

* perf(head): Defer CSS partial loading

* feat(components): Add base icon styles

* chore(icons): Add .gitkeep to keep directory tracked

* feat(prettier): Add TOML formatting plugin

* feat(prettier): Add TOML formatting plugin

* build(css): Add Tailwind CSS processing to main stylesheet

* build(hugo): Configure build for Tailwind JIT and asset caching

* refactor(config): Migrate Hugo configuration to YAML

* feat(i18n): Add English localization for navigation

* fix(prettier): Update Prettier configuration for improved formatting

* feat(prettier): Add Tailwind CSS plugin and update format script

* fix(icon): Ensure default class is set for icon component

* fix(css): Simplify link tag formatting in CSS partial

* fix(markdown): Correct YAML front matter formatting in default.md

* chore(package): Remove unused dependencies from package-lock.json

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,19 @@
 {
-  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "none",
-  "plugins": ["prettier-plugin-go-template"],
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-go-template", "prettier-plugin-tailwindcss"],
   "overrides": [
     {
       "files": ["*.html"],
       "options": {
+        "printWidth": 120,
         "parser": "go-template"
       }
     }
