--- a/.github/workflows/accessibility-audit.yml
+++ b/.github/workflows/accessibility-audit.yml
@@ -11,7 +11,7 @@ env:
   BADGE_FOLDER: ".github/badges"
 
 jobs:
-  a11y-audit:
+  test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     permissions:
@@ -32,7 +32,8 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        # NOTE: Action is pinned to commit hash to satisfy CodeQL (actions/unpinned-tag)
+        uses: peaceiris/actions-hugo@75d2e84710de30f6ff7268e08f310b60ef14033f #v3.0.0
         with:
           hugo-version: ${{ steps.hugo-config.outputs.VERSION }}
           extended: true
@@ -56,7 +57,7 @@ jobs:
         # Only run if we are on Main or Manual Trigger
         if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
         run: |
-          # Determine Status based on the previous step
+          # 1. Determine Status based on the previous step
           if [ "${{ steps.playwright.outcome }}" == "success" ]; then
             STATUS="PASS"
             COLOR="266429"
@@ -68,7 +69,7 @@ jobs:
           REPO_BADGE="$BADGE_FOLDER/a11y.svg"
           TEMP_BADGE="temp_a11y.svg"
 
-          # Check if badge actually needs updating
+          # 2. Check if badge actually needs updating
           if [ -f "$REPO_BADGE" ]; then
              if grep -q "$STATUS" "$REPO_BADGE"; then
                 echo "✅ Status is still $STATUS. Badge is up to date."
@@ -77,7 +78,7 @@ jobs:
              fi
           fi
 
-          # Generate Temp Badge
+          # 3. Generate Temp Badge
           curl -s -G "https://img.shields.io/badge/A11y-$STATUS-$COLOR" \
             -d style=flat \
             -d logo=accessibility \
