--- a/.github/workflows/accessibility-audit.yml
+++ b/.github/workflows/accessibility-audit.yml
@@ -32,7 +32,8 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        # NOTE: Action is pinned to commit hash to satisfy CodeQL (actions/unpinned-tag)
+        uses: peaceiris/actions-hugo@75d2e84710de30f6ff7268e08f310b60ef14033f #v3.0.0
         with:
           hugo-version: ${{ steps.hugo-config.outputs.VERSION }}
           extended: true
