chore(prettier): Ignore Playwright output directories

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,3 +12,9 @@ coverage/
 
 # Lock files (auto-generated)
 package-lock.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/
