feat(ui): Add Button component (#3)
* feat: Add button component styles

* feat: Import button component styles and add cursor-pointer for buttons

* feat: Add performance audit workflow with badge generation

* feat: Refactor performance badge generation and deployment logic

* feat: Add workflow for generating and deploying stack version badges

* feat: Update badge deployment to use current branch reference

* chore(ci): Refine performance badge update logic

* feat(a11y): Add CI workflow for automated audit and status badge

* docs: Add initial README.md

* fix(ci): Pin Hugo action to commit hash

* ci(dependabot): Add configuration for GitHub Actions

* test(axe): Add demo accessibility test for homepage

* feat(dev-workflow): Add Playwright and new npm scripts

- Integrate Playwright for end-to-end and accessibility testing.
- Introduces `dev`, `build`, `test`, `test:ui`, `test:podman`, and `setup` npm scripts.
- Updates Hugo engine to `0.154.3`.

* feat(test): Add script to run Playwright tests with Podman

- Implements the `test:podman` script functionality.
- Ensures tests run in an isolated environment with correct user permissions and host network access.

* chore(prettier): Ignore Playwright output directories

* feat(e2e): Set up Playwright for end-to-end testing

* feat(home): Display page title in H1

* chore(playwright): Ignore Playwright output directories

* 🤖 Update Stack Versions badges [skip ci]

* chore(workflow): update actions/checkout to v6

* chore(workflow): update GitHub Actions versions

* chore(workflow): improve secrets handling in performance audit

* style(button): adjust secondary variant background hover

* Update accessibility-audit.yml

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/accessibility-audit.yml
+++ b/.github/workflows/accessibility-audit.yml
@@ -11,7 +11,7 @@ env:
   BADGE_FOLDER: ".github/badges"
 
 jobs:
-  test:
+  a11y-audit:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     permissions:
@@ -32,8 +32,7 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Setup Hugo
-        # NOTE: Action is pinned to commit hash to satisfy CodeQL (actions/unpinned-tag)
-        uses: peaceiris/actions-hugo@75d2e84710de30f6ff7268e08f310b60ef14033f #v3.0.0
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: ${{ steps.hugo-config.outputs.VERSION }}
           extended: true
@@ -117,3 +116,4 @@ jobs:
         run: |
           echo "❌ Playwright tests failed!"
           exit 1
+
