feat(deps): Add alpinejs and glob packages
This commit adds the following dependencies:
- @alpinejs/anchor
- @alpinejs/collapse
- @alpinejs/csp
- @alpinejs/focus
- glob

--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "test:podman": "./scripts/podman-test.sh",
     "setup": "npm install && npx playwright install --with-deps"
   },
+  "dependencies": {
+    "@alpinejs/anchor": "^3.15.3",
+    "@alpinejs/collapse": "^3.15.3",
+    "@alpinejs/csp": "^3.15.3",
+    "@alpinejs/focus": "^3.15.3"
+  },
   "devDependencies": {
     "@axe-core/playwright": "^4.11.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/cli": "^4.1.18",
     "@types/node": "^25.0.3",
+    "glob": "^13.0.0",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
     "prettier-plugin-go-template": "^0.0.15",
