fix(ci): Skip audit workflow on private repos

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -18,6 +18,7 @@ on:
     branches: ['main']
   schedule:
     - cron: '23 7 * * 1'
+  workflow_dispatch:
 
 env:
   # Configuration Variables
@@ -26,6 +27,9 @@ env:
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
+    # Determine when the job runs.
+    if: ${{ !github.event.repository.private || github.repository == 'oxypteros/keystone-ui' }}
+
     # Runner size impacts CodeQL analysis time. To learn more, please see:
     #   - https://gh.io/recommended-hardware-resources-for-running-codeql
     #   - https://gh.io/supported-runners-and-hardware-resources
@@ -107,7 +111,7 @@ jobs:
   security-badge:
     name: Generate Security Badge
     needs: analyze
-    if: always() # Run even if analysis fails
+    if: always() && needs.analyze.result != 'skipped'
     runs-on: ubuntu-latest
     permissions:
       contents: write
